2019-06-04  Sihui Liu  <sihui_liu@apple.com>

        WKWebsiteDataStore API fails to fetch web storage data for non-persistent data store
        https://bugs.webkit.org/show_bug.cgi?id=198317

        Reviewed by Alex Christensen.

        * TestWebKitAPI/Tests/WebKitCocoa/WKWebsiteDatastore.mm:
        (TestWebKitAPI::TEST):

2019-06-04  Takashi Komori  <Takashi.Komori@sony.com>

        [WinCairo] Implement cpu and memory measuring functions.
        https://bugs.webkit.org/show_bug.cgi?id=198466

        Reviewed by Don Olmstead.

        * WebKitTestRunner/InjectedBundle/win/TestRunnerWin.cpp:
        (WTR::TestRunner::inspectorTestStubURL):

2019-06-04  Zan Dobersek  <zdobersek@igalia.com>

        [misc] Remove JSCOnly ARMv7 Traditional bot
        https://bugs.webkit.org/show_bug.cgi?id=198524

        Reviewed by Carlos Garcia Campos.

        This is not a supported configuration anymore, so the buildbot slave can
        be removed from configuration.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        (WebKitBuildbot):
        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:

2019-06-03  Andy Estes  <aestes@apple.com>

        [Apple Pay] Disable script injection when canMakePayment APIs are called and return true
        https://bugs.webkit.org/show_bug.cgi?id=198448
        <rdar://problem/51323694>

        Reviewed by Alex Christensen.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/ApplePay.mm:
        (-[TestApplePayAvailableScriptMessageHandler userContentController:didReceiveScriptMessage:]):
        (-[TestApplePayActiveSessionScriptMessageHandler userContentController:didReceiveScriptMessage:]):
        (TestWebKitAPI::TEST):
        (TestWebKitAPI::runActiveSessionTest):