@@ -1,3 +1,13 @@
+2019-06-04  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews-build] Do not display unnecessary steps in the Buildbot build page UI
+        https://bugs.webkit.org/show_bug.cgi?id=198218
+        <rdar://problem/51104544>
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+
 2019-06-04  Sihui Liu  <sihui_liu@apple.com>
 
         WKWebsiteDataStore API fails to fetch web storage data for non-persistent data store
